--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
         </configuration>
       </plugin>
 
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+     <version>3.3.1</version>
+    </plugin>
+             
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
