--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -10,10 +10,10 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>welcome</artifactId>
+  <artifactId>devops6</artifactId>
   <packaging>war</packaging>
-  <name>welcome</name>
-  <description>welcome.</description>
+  <name>devops6</name>
+  <description>devops6.</description>
 
   <build>
     <finalName>${project.artifactId}</finalName>
